After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784311 - gst-inspect: Fix memory leak in print_pad_templates_info
gst-inspect: Fix memory leak in print_pad_templates_info
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-28 23:37 UTC by Jimmy Ohn
Modified: 2017-06-29 14:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak in print_pad_templates_info (1.06 KB, patch)
2017-06-28 23:39 UTC, Jimmy Ohn
committed Details | Review

Description Jimmy Ohn 2017-06-28 23:37:34 UTC
gst_static_caps_get function returned allocated memory.
So, It should be free using gst_caps_unref.
Comment 1 Jimmy Ohn 2017-06-28 23:39:19 UTC
Created attachment 354659 [details] [review]
Fix memory leak in print_pad_templates_info
Comment 2 Tim-Philipp Müller 2017-06-29 14:27:20 UTC
Thanks:

commit a8acba142f95815d93112294e7d2110553aeb62e (HEAD -> master)
Author: Jimmy Ohn <yongjin.ohn@lge.com>
Date:   Thu Jun 29 08:30:50 2017 +0900

    gst-inspect: Fix memory leak in print_pad_templates_info
    
    gst_static_caps_get function returned allocated memory.
    So, It should be free using gst_caps_unref.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=784311